fix: stretched alert of review form

--- a/src/page-components/Reviews/ReviewForm/ReviewForm.module.css
+++ b/src/page-components/Reviews/ReviewForm/ReviewForm.module.css
@@ -28,7 +28,8 @@
 }
 
 .description,
-.submit {
+.submit,
+.alert {
   grid-column: 1 / -1;
 }
 
